--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,18 +1,50 @@
+.navbar {
+  background-image: url("../../assets/images/leather_background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  box-shadow: 0px 20px 28px black;
+
+}
+
 .logo {
-    height: 150px;
-    min-width: 100%;
-    padding-right: 50px;
+  height: 170px;
+  min-width: 100%;
+  padding-right: 50px;
 }
 
-.accentbar  {
-    width: 110%;
-    left: -5%;
-    top: -15px;
-    z-index: 100;
-    position: relative;
+.accentbar {
+  width: 115%;
+  left: -10%;
+  top: -30px;
+  z-index: 100;
+  position: relative;
 }
 
-.dropdown {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: calc(10px + 1vw)
+.pill-dropdown {
+  color: #ffffff;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: calc(10px + 1vw);
+  padding: 12px;
+  border-radius: 28px;
+  background: rgb(239, 203, 203);
+  background: radial-gradient(
+    circle,
+    rgba(239, 203, 203, 0.5) -20%,
+    rgba(88, 14, 14, 0.8) 100%
+  );
+  box-shadow: 0px 0px 8px white;
+}
+
+.pill-dropdown:hover {
+    box-shadow: 0px 0px 18px white;
+}
+@media screen and (max-width: 864px) {
+  .accentbar {
+    top: -24px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .accentbar {
+    top: -18px;
+  }
 }
