--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,4 +1,10 @@
-.navbar {
+body {
+  background: rgb(23,1,1);
+  height: 3000px;
+  overflow: hidden;
+  background: linear-gradient(288deg, rgba(23,1,1,1) 0%, rgba(88,14,14,1) 100%);}
+
+.main-nav {
   background-image: url("../../assets/images/leather_background.png");
   background-size: cover;
   background-repeat: no-repeat;
@@ -14,7 +20,7 @@
 
 .accentbar {
   width: 115%;
-  left: -10%;
+  left: -5%;
   top: -30px;
   z-index: 100;
   position: relative;
@@ -26,17 +32,17 @@
   font-size: calc(10px + 1vw);
   padding: 12px;
   border-radius: 28px;
-  background: rgb(239, 203, 203);
-  background: radial-gradient(
-    circle,
-    rgba(239, 203, 203, 0.5) -20%,
-    rgba(88, 14, 14, 0.8) 100%
-  );
-  box-shadow: 0px 0px 8px white;
+  box-shadow: 0px 0px 2px white;
 }
 
 .pill-dropdown:hover {
-    box-shadow: 0px 0px 18px white;
+    background-color: white;
+    color: black;
+}
+
+.dropdown-item:hover {
+  background-color: rgba(88,14,14,1);
+  color: white;
 }
 @media screen and (max-width: 864px) {
   .accentbar {
