--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,8 +1,9 @@
 body {
   background: rgb(23,1,1);
-  height: 3000px;
-  overflow: hidden;
-  background: linear-gradient(288deg, rgba(23,1,1,1) 0%, rgba(88,14,14,1) 100%);}
+  background: linear-gradient(288deg, rgba(23,1,1,1) 0%, rgba(88,14,14,1) 100%);
+  overflow-x: hidden;
+}
+
 
 .main-nav {
   background-image: url("../../assets/images/leather_background.png");
@@ -30,7 +31,7 @@ body {
   color: #ffffff;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: calc(10px + 1vw);
-  padding: 12px;
+  padding: 6px;
   border-radius: 28px;
   box-shadow: 0px 0px 2px white;
 }
