added footer, link path check, spelling error corrected in title, testimonials page created with animation and single testimonial

--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -2,7 +2,7 @@
   background-image: url("../../assets//images/code_background.png");
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 60vh;
+  min-height: 430px;
 }
 
 .about-image {
