--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,16 +1,18 @@
 body {
-  background: rgb(23,1,1);
-  background: linear-gradient(288deg, rgba(23,1,1,1) 0%, rgba(88,14,14,1) 100%);
+  background: rgb(23, 1, 1);
+  background: linear-gradient(
+    288deg,
+    rgba(23, 1, 1, 1) 0%,
+    rgba(88, 14, 14, 1) 100%
+  );
   overflow-x: hidden;
 }
-
 
 .main-nav {
   background-image: url("../../assets/images/leather_background.png");
   background-size: cover;
   background-repeat: no-repeat;
   box-shadow: 0px 20px 28px black;
-
 }
 
 .logo {
@@ -36,12 +38,12 @@ body {
 }
 
 .pill-dropdown:hover {
-    background-color: white;
-    color: black;
+  background-color: white;
+  color: black;
 }
 
 .dropdown-item:hover {
-  background-color: rgba(88,14,14,1);
+  background-color: rgba(88, 14, 14, 1);
   color: white;
 }
 @media screen and (max-width: 864px) {
@@ -52,5 +54,11 @@ body {
 @media screen and (max-width: 768px) {
   .accentbar {
     top: -18px;
+  }
+}
+
+@media screen and (min-width: 1700px) {
+  .accentbar {
+    top: -45px;
   }
 }
