--- a/client/src/pages/Testimonials/Testimonials.css
+++ b/client/src/pages/Testimonials/Testimonials.css
@@ -1,5 +1,13 @@
 .collapse-btn {
-  color: #0000ee;
+  color: white;
+  padding: 8px;
+  text-decoration: none;
+  font-size: calc(10px + 1vw);
+  box-shadow: 0px 0px 2px white;
+  border-radius: 28px;
+  margin-top: 8px;
+  margin-left: auto;
+  width: fit-content;
 }
 
 .t-container {
@@ -8,8 +16,20 @@
 }
 
 .collapse-btn:hover {
-  color: white;
-  font-weight: 500;
+  color: black;
+  background-color: white;
+}
+
+blockquote {
+  font-size: larger;
+}
+
+blockquote > span {
+  font-size: 24px;
+  position: relative;
+  margin: 0px;
+  padding: 0px;
+  font-family: cursive;
 }
 
 #visitTooltip {
@@ -39,6 +59,7 @@
 .front-image,
 .back-image {
   width: 100%;
+  max-width: 450px;
   height: 100%;
   position: absolute;
   backface-visibility: hidden;
