--- a/client/src/components/Icons/Icons.css
+++ b/client/src/components/Icons/Icons.css
@@ -4,13 +4,16 @@
   right: 0;
 }
 
+.img-container {
+  height: 50px;
+  width: 50px;
+  padding: 10px;
+  margin-bottom: 2px;
+}
+
+
 .jason-icon {
   height: 45px;
   width: 45px;
-  padding: 2px;
   border-radius: 50%;
-  position: relative;
-  top: 0;
-  right: 0;
-  margin-top: 10px;
 }
