update css on about page, footer, and image thumbnails

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -11,3 +11,9 @@
   font-weight: 900;
   text-decoration: underline;
 }
+
+.footer-divider {
+  width: 30%;
+  height: 5px;
+  background-color: black;
+}
