--- a/client/src/components/InnerNav/InnerNav.css
+++ b/client/src/components/InnerNav/InnerNav.css
@@ -7,7 +7,8 @@
 
 #inner-navbar > div > a {
     color: white;
-    font-size: calc(10px + 1vw);
+    font-size: calc(8px + 1vw);
+    padding: 4px 14px;
     box-shadow: 0px 0px 2px white;
     border-radius: 28px;
     margin: 8px;
@@ -18,6 +19,11 @@
     color: black;
 }
 
+.innernav-container {
+    margin-left: 100px;
+}
+
+
 @media screen and (min-width: 1400px) {
     .inner-nav {
         margin-top: -3%;
@@ -26,6 +32,9 @@
 @media screen and (max-width: 767px) {
     .inner-nav {
        background-size: auto;
+    }
+    .innernav-container {
+        margin-left: 10px;
     }
 }
   
