--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -31,8 +31,8 @@ body {
 .pill-dropdown {
   color: #ffffff;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: calc(10px + 1vw);
-  padding: 6px;
+  font-size: calc(8px + 1vw);
+  padding: 4px 14px;
   border-radius: 28px;
   box-shadow: 0px 0px 2px white;
 }
