--- a/client/src/pages/Testimonials/Testimonials.css
+++ b/client/src/pages/Testimonials/Testimonials.css
@@ -1,8 +1,8 @@
 .collapse-btn {
   color: white;
-  padding: 8px;
+  padding: 4px 14px;
   text-decoration: none;
-  font-size: calc(10px + 1vw);
+  font-size: calc(8px + 1vw);
   box-shadow: 0px 0px 2px white;
   border-radius: 28px;
   margin-top: 8px;
